fixing some responsive layout issues on launch buttons

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -248,8 +248,10 @@ section {
   font-family: @sectionHeaderFont;
   position: absolute;
   right: 0;
-  bottom: 0;
+  top: 0;
+  padding: 0;
   margin-bottom: 10px;
+  line-height: 33px;
 
 }
 
